 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 7
============
* [DanielPharos]: Set a more sensible minimum render distance. This should reduce Z-buffer
          - fighting in OpenGL and Direct3D.

* [DanielPharos]: Added workaround for OpenGL implementations that cause floating point
          - exceptions to be raised during rendering.

* [DanielPharos]: Rewrote the Intel precision assembly code to only change the precision,
          - not any other floating point flags, and removed it from the Software renderer.

* [DanielPharos]: Fixed a bug introduced with the recent OpenGL texture loading fix, producing
          - corrupt output in the viewport if the width is not a multiple of four.

* [DanielPharos]: Fixed a bug corrupting MOHAA patchDef2 and patchDef3 saving.

* [DanielPharos]: Fixed handling File Association paths with spaces.

* [DanielPharos]: Fixed OpenGL texture loading issues, most commonly with odd-sized textures.

* [DanielPharos]: Cache texture sizes during map loading and saving for a big speed improvement
          - with certain games.

* [DanielPharos]: Enabled support for Call of Duty 2. All basic operations are functional!

* [DanielPharos]: Added experimental support for loading CoD2 material files.

* [DanielPharos]: Completed support for surface flags in Call of Duty 1 .map files.

* [DanielPharos]: Added Call of Duty 1: United Offensive support.

* [DanielPharos]: Corrected the loading order of pak file: now official pak files are loaded first,
          - just like the games do.

* [DanielPharos]: Fixed a bug where QuArK lost track of game file folders if it failed to load