@@ -13,6 +13,8 @@
 
 6.6.0 Beta 7
 ============
+* [DanielPharos]: Added trilinear texture filtering to Glide renderer.
+
 * [DanielPharos]: Set a more sensible minimum render distance. This should reduce Z-buffer
           - fighting in OpenGL and Direct3D.
 
